@startuml

!include ./_commons.style

package uutf {


  abstract class Test {
    + run()
    __
    + {abstract} run(ResultCollector)
  }

  abstract class TestCase {
    - String methodName
    __
    + this()
    + initialize(String): TestCase
    __
    + run(ResultCollector)
    - invokeTestMethod()
    __
    # setUp()
    # tearDown()
  }

  abstract class SingleTestCase {
    - {static} String DEFAULT_TEST_METHOD = "test"
    __
    + this()
    __
    + {abstract} test()
  }
  note right: Adapter

  TestCase <|-- SingleTestCase


  class TestSuite {
    + run(ResultCollector)
    __
    + addTest(Test)
  }

  TestSuite *--> "1..n\ncases" Test

  class TestRunner {
    + run(Test)
  }

  TestRunner . Test

  Test <|-- TestCase
  Test <|-- TestSuite

@enduml
